<resources>
    <string name="app_name">LowCopyJianTalk</string>
    <string name="test_context_first_page">首页</string>
    <string name="test_context_find_page">发现</string>
    <string name="test_context_create_page">新建文章</string>
    <string name="test_context_notify_page">通知</string>
    <string name="test_context_mine_page">我的</string>
    <string name="test_pager_is_preparing">页面正在建设中</string>
    <string name="test_start_first_page">开启首页</string>
    <string name="test_login">登陆</string>
    <string name="test_resign">注册</string>
    <string name="test_remember_pwd">记住密码</string>
    <string name="test_forget_pwd">忘记密码?</string>
    <string name="test_reset_pwd">重置密码</string>
    <string name="test_person_account">账号</string>
    <string name="test_person_password">密码</string>
    <string name="test_person_email">邮箱</string>
    <string name="test_person_desc">简介</string>
    <string name="test_old_password">旧密码</string>
    <string name="test_new_password">新密码</string>
    <string name="test_reset_pwd_by_memory">快捷方式</string>
    <string name="test_reset_pwd_by_email">邮箱方式</string>
    <string name="test_edit_mine_message">编辑</string>
    <string name="test_user_dynamic">动态</string>
    <string name="test_user_focus">关注</string>
    <string name="test_user_fans">粉丝</string>
    <string name="test_user_favourite_article">喜欢的文章</string>
    <string name="test_user_collect_article">收藏的文章</string>
    <string name="test_user_articles">我的文集</string>
    <string name="test_night_module">夜间模式</string>
    <string name="test_user_settings">设置中心</string>
    <string name="test_mine_center">个人中心</string>
    <string name="test_mine_nick_name">我的昵称</string>
    <string name="test_mine_sex">我的性别</string>
    <string name="test_mine_age">我的年龄</string>
    <string name="test_mine_desc">我的简介</string>
    <string name="test_submit">确认提交</string>
    <string name="test_male">男</string>
    <string name="test_female">女</string>
    <string name="test_exit">退出</string>
    <string name="test_camera">相机</string>
    <string name="test_photo">相册</string>
    <string name="test_cancel">取消</string>
    <string name="test_movie">影视讯息</string>
    <string name="test_movie_original_title">原名</string>
    <string name="test_movie_year">年份</string>
    <string name="test_movie_collect_count">收藏量</string>
    <string name="test_movie_rating">评分</string>

</resources>
