<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_vertical"
              android:background="@drawable/login"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/log_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/test_person_account"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_account"
            style="@style/LoginEditTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/test_person_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_pwd"
            style="@style/LoginEditTextStyle"
            android:inputType="numberPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_remember_pwd"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/cb_check_selector"/>

        <TextView
            android:layout_width="88dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_forget_pwd"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_login"
            android:gravity="center"
            android:background="@drawable/btn_login_shape"
            android:alpha="0.5"
            android:text="@string/test_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_resign"
            android:gravity="center"
            android:background="@drawable/btn_login_shape"
            android:layout_marginTop="20dp"
            android:alpha="0.5"
            android:text="@string/test_resign"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>