<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rl_mine_msg_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_mine_msg_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#BDBDBD"
        android:scaleType="fitXY"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_mine_head_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:src="@drawable/add_pic"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"/>

    <LinearLayout
        android:id="@+id/ll_mine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_mine_msg_img"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/test_mine_nick_name"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_mine_nick_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mine_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_mine_name"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mine_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/test_mine_sex"
            android:textSize="14sp"/>

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/test_male"/>

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/test_female"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mine_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_mine_sex"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mine_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/test_mine_age"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_mine_age"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mine_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_mine_age"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mine_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/test_mine_desc"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_mine_desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_mine_msg_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_mine_desc"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_login_shape"
        android:text="@string/test_submit"/>

    <Button
        android:id="@+id/btn_mine_msg_exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_mine_msg_submit"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_shape"
        android:text="@string/test_exit"/>
</RelativeLayout>